--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                <p>Обучение, которое позволит вашему бизнесу развиваться и расти.</p>
             </div>
             <div class="video">
-               <iframe width="560" height="315" src="https://www.youtube.com/embed/MrzkL1Cq_bA" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+               <iframe width="560" height="315" src="https://www.youtube.com/embed/MrzkL1Cq_bA" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen controls="1"></iframe>
             </div>
          </div>
       </div>
